jeprofl/src/snapshots/jeprof__collector__test__tests__print_histogram_empty.snap
---
source: jeprof/src/collector.rs
expression: buf
---
Size      | Count     | Percentage | Distribution
----------+-----------+------------+--------------------------------------------------
Total allocations: 0 B in 0 allocations
