jeprofl/src/snapshots/jeprof__collector__test__tests__print_histogram_large_allocations.snap
---
source: jeprof/src/collector.rs
expression: buf
---
Size      | Count     | Percentage | Distribution
----------+-----------+------------+--------------------------------------------------
1.0 MiB    |         1 |     50.00% | ##################################################
1.0 GiB    |         1 |     50.00% | ##################################################
Total allocations: 1.0 GiB in 2 allocations
