jeprofl/src/snapshots/jeprof__collector__test__tests__print_histogram_many_small_allocations.snap
---
source: jeprof/src/collector.rs
expression: buf
---
Size      | Count     | Percentage | Distribution
----------+-----------+------------+--------------------------------------------------
1 B        |      1000 |     99.90% | ##################################################
512 B      |         1 |      0.10% | 
Total allocations: 2.0 kiB in 1001 allocations
